<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="username_hint">中文、字母或数字</string>
    <string name="login">登录</string>
    <string name="youke">游客模式</string>
    


    <string name="search_hint">请输入搜索词</string>
    <string name="mypage_btn0">编辑资料</string>
    <string name="name">杨骁鹏    男</string>
    <string name="information">信息管理与信息系统1102</string>
    <string name="editInfo">编辑资料</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string> 
    <string name="editName">用户名：</string>
    <string name="editGender">性别：</string>
    <string name="editRoom">寝室：</string>
    <string name="editMajor">专业：</string>
    <string name="editClass">班级：</string>
    <string name="editAcademy">学院：</string>
    <string name="editPrivicyLv">隐私级别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="mypage_title">个人中心</string>
    <string name="mypage_btn1">我关注的人</string>
    <string name="mypage_btn2">关注我的人</string>
    <string name="mypage_btn3">我的课程</string>
    <string name="mypage_btn4">我的评论</string>
    <string name="mypage_btn5">我的活动</string>
    <string name="mypage_btn6">资料百科</string>
    <string name="info_btn0_b"/>
    <string name="edit_info_title">编辑资料</string>
    <string name="edit_info_btn1">取消</string>
    <string name="edit_info_btn2">保存</string>
    <string name="search_result_title">搜索结果</string>
	<string name="search_result_btn1">返回</string> 
	
    
    
    <string name="app_name">财大app</string>
    <string name="app_name1">找自习室</string>
    <string name="app_name2">信息交流</string>
    <string name="app_name3">更多</string>
    <string name="app_name4">智能学习</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="more">更多</string>
    <string name="main">首页</string>
    <string name="classroom">找自习室</string>
    <string name="study">智能学习</string>
    <string name="exchangeinformation">信息交流</string>
    <string name="zhuce">注册</string>
    <string name="denglu">登录</string>
    <string name="caidaapp">财大app</string>
    <string name="aboutus">   关于我们</string>
    <string name="introduction">软件介绍</string>
    <string name="exit">退出程序</string>
    <string name="logout">   注销登录</string>
    <string name="welcome">欢迎使用财大app~~</string>
    <string name="xueyuan">请选择学院</string>
    <string name="zhuanye">请选择专业</string>
    <string name="qinshi">请选择寝室</string>
    <string name="no"></string> 
     <string name="richeng">richeng</string>
     <string name="zixi">自习</string>
     <string name="fuxi">复习</string>
     <string name="zixi_tianjia">点击添加自习计划</string>
     
     <string name="xieyi">
         
尊敬的用户，欢迎阅读本协议：\n
　　Znufe依据本协议的规定提供服务，本协议具有合同效力。您必须完全同意以下所有条款并完成个人资料的填写，才能保证享受到更好Znufe客服服务。您使用服务的行为将视为对本协议的接受，并同意接受本协议各项条款的约束。\n
　　 用户必须合法使用网络服务，不作非法用途，自觉维护本应用的声誉，遵守所有使用网络服务的网络协议、规定、程序和惯例。\n
　　为更好的为用户服务，用户应向本应用提供真实、准确的个人资料，个人资料如有变更，应立即修正。如因用户提供的个人资料不实或不准确，给用户自身造成任何性质的损失，均由用户自行承担。\n
　　尊重个人隐私是Znufe的责任，Znufe在未经用户授权时不得向第三方公开、编辑或透露用户个人资料的内容，但由于政府要求、法律政策需要等原因除外。在用户发送信息的过程中和本应用收到信息后，本应用将遵守行业通用的标准来保护用户的私人信息。但是任何通过因特网发送的信息或电子版本的存储方式都无法确保100%的安全性。因此，本应用会尽力使用商业上可接受的方式来保护用户的个人信息，但不对用户信息的安全作任何担保。\n
　　本应用有权在必要时修改服务条例，本应用的服务条例一旦发生变动，将会在本应用的重要页面上提示修改内容，用户如不同意新的修改内容，须立即停止使用本协议约定的服务，否则视为用户完全同意并接受新的修改内容。根据客观情况及经营方针的变化，本应用有中断或停止服务的权利，用户对此表示理解并完全认同。\n
　　本保密协议的解释权归Znufe所有。\n\n
    Znufe\n
    2014年12月\n</string>
         	
     <string name="tiaokuan">
　　Znufe服务协议\n
　　【首部及导言】\n
　　欢迎您使用Znufe！\n
　　为使用Znufe的服务，您应当阅读并遵守《Znufe服务协议》（以下简称“本协议”）和《Znufe用户隐私保护协议》。请您务必审慎阅读、充分理解各条款内容。除非您已阅读并接受本协议所有条款，否则您无权使用Znufe提供的服务。您使用腾讯的服务即视为您已阅读并同意上述协议的约束。\n\n

　　一、【协议的范围】\n
　　1.1本协议是您与Znufe之间关于用户使用Znufe相关服务所订立的协议。“Znufe”是指中南财经政法大学校园手机应用（Android版）。“用户”是指使用Znufe相关服务的使用人，在本协议中更多地称为“您”。\n
　　1.2本协议项下的服务是指Znufe向用户提供的包括但不限于网络通讯、课表查询、自习室查询等服务.\n\n

　　二、【帐号与密码安全】\n
　　2.1您在使用Znufe的服务时可能需要注册一个帐号。此账号为您的学号，密码为登录选课系统密码。注册前请认真阅读《Znufe用户隐私保护协议》。\n
　　2.2Znufe用户隐私保护协议特别提醒您应妥善保管您的帐号和密码。当您使用完毕后，应安全退出。因您保管不善可能导致遭受盗号或密码失窃，责任由您自行承担。\n

　　三、【用户个人信息保护】\n
　　3.1保护用户个人信息是Znufe用户隐私保护协议的一项基本原则。\n
　　3.2您在注册帐号或使用本服务的过程中，可能需要填写一些必要的信息。若国家法律法规有特殊规定的，您需要填写真实的身份信息。若您填写的信息不完整，则无法使用本服务或在使用过程中受到限制。\n
　　3.3一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别（如号码申诉服务）的考虑，您可能无法修改注册时提供的初始注册信息及其他验证信息。\n
　　3.4Znufe将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。\n
　　3.5未经您的同意，Znufe不会向Znufe以外的任何公司、组织和个人披露您的个人信息，但法律法规另有规定的除外。\n\n

　　四、【使用本服务的方式】\n
　　4.1除非您与Znufe另有约定，您同意本服务仅为您个人非商业性质的使用。\n
　　4.2您应当通过Znufe提供或认可的方式使用本服务。您依本协议条款所取得的权利不可转让。\n
　　4.3您不得使用未经Znufe授权的插件、外挂或第三方工具对本协议项下的服务进行干扰、破坏、修改或施加其他影响。\n\n

　　五、【自备设备】\n
　　5.1您应当理解，您使用Znufe的服务需自行准备与相关服务有关的终端设备（如电脑、调制解调器等装置），并承担所需的费用（如电话费、上网费等费用）。\n
　　5.2您理解并同意，您使用本服务时会耗用您的终端设备和带宽等资源。\n\n
　　
　　六、【知识产权声明】\n
　　6.1Znufe在本服务中提供的内容（包括但不限于网页、文字、图片、音频、视频、图表等）的知识产权归Znufe所有，用户在使用本服务中所产生的内容的知识产权归用户或相关权利人所有。\n
　　6.2除另有特别声明外，Znufe提供本服务时所依托软件的著作权、专利权及其他知识产权均归Znufe所有。\n
　　6.4上述及其他任何本服务包含的内容的知识产权均受到法律保护，未经腾讯、用户或相关权利人书面许可，任何人不得以任何形式进行使用或创造相关衍生作品。\n\n

　　七、【协议的生效与变更】\n
　　7.1您使用Znufe的服务即视为您已阅读本协议并接受本协议的约束。\n
　　7.2Znufe有权在必要时修改本协议条款。您可以在相关服务页面查阅最新版本的协议条款。\n
　　7.3本协议条款变更后，如果您继续使用Znufe提供的软件或服务，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用Znufe提供的软件或服务。（正文完）</string>
         			
     <string name="appjs">
znufe</string>
</resources>
