<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" 
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mypage_title"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
        
    </RelativeLayout>
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:layout_weight="1.53"
	    android:background="@drawable/backgroundimg" >

		<TextView
		    android:id="@+id/my_page_tv1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dp"
		    android:layout_marginLeft="5dp"
		    android:text=" " 
		    android:textSize="18sp"
		    android:textStyle="bold" />

		<TextView
		    android:id="@+id/my_page_tv2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/my_page_tv1"
		    android:layout_marginLeft="5dp"
		    android:textSize="18sp"
		    android:text=" " />
		
		<Button android:id="@+id/mypage_btn0"
		    android:layout_width="90dp"
		    android:layout_height="40dp"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true"
		    android:text="@string/mypage_btn0"
		    android:textSize="14sp" />
 
	</RelativeLayout>
	  
    <LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5" 
        android:orientation="vertical" >
        
        <EditText android:id="@+id/mypage_et"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/search_hint"
	        android:imeOptions="actionSearch"
	        android:singleLine="true" />
        
	    <TableLayout android:id="@+id/mypage_table"
	        android:layout_width="match_parent"
	        android:layout_height="1dp" 
	        android:stretchColumns="0,1,2"
	        android:padding="6dp" >
	    	 
			<TableRow android:id="@+id/mypage_tr1"
				android:layout_height="0dp"
				android:layout_weight="1" > 
				
				<Button android:id="@+id/mypage_btn1"
					android:layout_height="40dp"
					android:layout_width="100dp" 
					android:layout_weight="1"
					android:layout_margin="8dp" 
					android:gravity="bottom|center"
					android:paddingBottom="10dp"
					android:text="@string/mypage_btn1" 
					android:background="@drawable/shape1" />  
					
				<Button android:id="@+id/mypage_btn2"
					android:layout_height="40dp"
					android:layout_width="100dp" 
					android:layout_weight="1"
					android:layout_margin="8dp"
					android:gravity="bottom|center"
					android:paddingBottom="10dp"
					android:text="@string/mypage_btn2" 
					android:background="@drawable/shape1" />  
					
				<Button android:id="@+id/mypage_btn3"
					android:layout_height="40dp"
					android:layout_width="100dp" 
					android:layout_weight="1"
					android:layout_margin="8dp"
					android:gravity="bottom|center"
					android:paddingBottom="10dp"
					android:text="@string/mypage_btn3" 
					android:background="@drawable/shape1" />  
					
		    </TableRow> 
	     
		    <TableRow android:id="@+id/mypage_tr2"
		        android:layout_height="0dp"
		        android:layout_weight="1" > 
		        
				<Button android:id="@+id/mypage_btn4"
					android:layout_height="40dp"
					android:layout_width="100dp" 
					android:layout_weight="1"
					android:layout_margin="8dp"
					android:gravity="bottom|center"
					android:paddingBottom="10dp"
					android:text="@string/mypage_btn4" 
					android:background="@drawable/shape1" />  
					
				<Button android:id="@+id/mypage_btn5"
				    android:layout_height="40dp"
				    android:layout_width="100dp" 
					android:layout_weight="1"
					android:layout_margin="8dp"
					android:gravity="bottom|center"
					android:paddingBottom="10dp"
					android:text="@string/mypage_btn5" 
					android:background="@drawable/shape1" />  
					
				<Button android:id="@+id/mypage_btn6"
					android:layout_height="40dp"
					android:layout_width="100dp" 
					android:layout_weight="1"
					android:layout_margin="8dp"
					android:gravity="bottom|center"
					android:paddingBottom="10dp"
					android:text="@string/mypage_btn6" 
					android:background="@drawable/shape1" />  
					
		    </TableRow> 
	      
		</TableLayout>
		
	</LinearLayout>

</LinearLayout>
