<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tab" >
    
<TabHost
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/main_tab" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_tab" >

        </FrameLayout>
        <TabWidget 
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone"/>
    </LinearLayout>
</TabHost>

<RadioGroup
    android:id="@+id/main_tab"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:background="@drawable/maintab_toolbar_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal" 
    android:paddingBottom="3sp">

    <RadioButton
        android:id="@+id/radio_button4"
        style="@style/main_tab_bottom"
        android:layout_marginTop="2.0dip"
        android:drawableTop="@drawable/main"
        android:text="@string/main" 
        android:checked="true"/>

    <RadioButton
        android:id="@+id/radio_button1"
        style="@style/main_tab_bottom"
        android:layout_marginTop="2.0dip"
        android:drawableTop="@drawable/classroom"
        android:text="@string/classroom" />

    <RadioButton
        android:id="@+id/radio_button2"
        style="@style/main_tab_bottom"
        android:layout_marginTop="2.0dip"
        android:drawableTop="@drawable/study"
        android:text="@string/study" 
        />

    <RadioButton
        android:id="@+id/radio_button3"
        style="@style/main_tab_bottom"
        android:layout_marginTop="2.0dip"
        android:drawableTop="@drawable/exchangeinformation"
        android:text="@string/exchangeinformation" />

    <RadioButton
        android:id="@+id/radio_button0"
        style="@style/main_tab_bottom"
        android:layout_marginTop="2.0dip"
        android:drawableTop="@drawable/more"
        android:text="@string/more" />
</RadioGroup>

</RelativeLayout>