<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/edit_info_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_info_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button android:id="@+id/edit_info_btn1"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape2"
            android:text="@string/edit_info_btn1"
            android:textColor="#BCC8DE" />

        <Button android:id="@+id/edit_info_btn2"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape2"
            android:text="@string/edit_info_btn2"
            android:textColor="#BCC8DE" />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/edit_info_rl1"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_info_title"
        android:layout_margin="10dp" >
        
        <TextView android:id="@+id/edit_info_tv1"
            android:layout_centerVertical="true"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/editName"
	        android:textSize="20sp" />
    
	    <EditText android:id="@+id/edit_info_et1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:gravity="right|center"
	        android:layout_alignRight="@id/edit_info_tv1"
	        android:layout_toRightOf="@+id/edit_info_tv1" />
        
    </RelativeLayout>
      
    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_info_rl1"
        android:background="?android:attr/listDivider" />
    
    <RelativeLayout 
        android:id="@+id/edit_info_rl2"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
	    
        <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/textView1"
	        android:orientation="horizontal" >

	        <RadioButton
	            android:id="@+id/rbtn_female"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/textView2"
	            android:layout_alignParentRight="true" 
	            android:text="@string/female" />
	
	        <RadioButton
	            android:id="@+id/rbtn_male"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@+id/radioButton2"
	            android:layout_alignBottom="@+id/radioButton2" 
	            android:layout_toLeftOf="@+id/radioButton2"
	            android:text="@string/male" />
	        
    	</RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/editGender"
            android:textSize="20sp" />
        
	</RelativeLayout>
     
    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_info_rl2"
        android:background="?android:attr/listDivider" /> 
        
    <RelativeLayout 
        android:id="@+id/edit_info_rl3"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_margin="10dp"  >
    
        <TextView
        	android:id="@+id/edit_info_tv2"
            android:layout_centerVertical="true"
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/editClass"
	        android:textSize="20sp" />
          
		<EditText android:id="@+id/edit_info_et2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:gravity="right|center"
	        android:layout_alignRight="@id/edit_info_tv2"
	        android:layout_toRightOf="@+id/edit_info_tv2" /> 
	        
    </RelativeLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_info_rl3"
        android:background="?android:attr/listDivider" />
     
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view3"
        android:layout_margin="10sp"
        android:text="@string/editRoom"
        android:textSize="20sp" />
    
    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textView3"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view4"
        android:layout_margin="10sp"
        android:text="@string/editAcademy"
        android:textSize="20sp" />

    <View
        android:id="@+id/view5"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textView4"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view5"
        android:layout_margin="10sp"
        android:text="@string/editMajor"
        android:textSize="20sp" />

    <View
        android:id="@+id/view6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textView5"
        android:background="?android:attr/listDivider" />
 

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view6"
        android:layout_margin="10dp"
        android:text="@string/editPrivicyLv"
        android:textSize="20sp" />

    <View
        android:id="@+id/view7"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textView6"
        android:background="?android:attr/listDivider" />
    
    <Spinner
        android:id="@+id/sp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view3" />
    
    <Spinner
        android:id="@+id/sp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view4" />

    <Spinner
        android:id="@+id/sp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view5" />
  
    <Spinner
        android:id="@+id/sp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view6" />
 
</RelativeLayout>