<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#000000">

    <ImageView
        android:id="@+id/iv_show_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/top" />

        <Button
            android:id="@+id/button_mainenter_denglu"
            android:layout_width="120dp"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_login"
            android:text="@string/login"
            android:textColor="#043642"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_zhuce"
            android:layout_width="120dp"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_login"
            android:text="@string/zhuce"
            android:textColor="#043642"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/button_zhuce"
            android:src="@drawable/enter_znufe" />

        <Button
            android:id="@+id/button_mainenter_youke"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_above="@+id/button_mainenter_denglu"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_enter_youke"
            android:text="@string/youke"
            android:textColor="#e4f0f2"
            android:textSize="18sp"
            android:textStyle="italic"
            android:width="10dp" />

</RelativeLayout>